--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 4000
   servlet:
     context-path: /
     encoding:
@@ -14,13 +14,8 @@ spring:
     username: ${name}
     password: ${pw}
 
-  #  mvc: #뷰리졸버 설정 이거는 mustach라이브러리가 알아서 설정해줌
-  #    view:
-  #      prefix: /templates/
-  #      suffix: .mustache
-
   jpa:
     hibernate:
-      ddl-auto: create-drop #create update none
+      ddl-auto: create #create update none
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
