--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,16 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
+
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+	implementation group: 'io.jsonwebtoken', name:'jjwt-api',version: '0.11.2'
+	implementation group: 'io.jsonwebtoken', name:'jjwt-impl',version: '0.11.2'
+	implementation group: 'io.jsonwebtoken', name:'jjwt-jackson',version: '0.11.2'
+
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
