공구글 작성 일단 완료 (나중에 사용자 로그인정보가지고 오는거하고 converter 등 리펙토링하기)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,7 +39,7 @@ spring:
       max-request-size: 20MB
 
 
-itemImgLocation: C:/file/upload/    # 상품 이미지 저장 위치
+ImgLocation: C:/file/upload/    # 상품 이미지 저장 위치
 uploadPath: file:///C:/upload/      # 상품 이미지 업로드 위치
 
 
